更新presto配置